# NexusRaven

./: .gitignore  CODE_LICENSE  DATA_LICENSE  NexusRaven-13B.md  NexusRaven_API_evaluation.md  README.md  pyproject.toml
cache/: .gitignore
docs/: prompting_readme.md
raven/: __init__.py  utils.py
raven/data/: process_toolalpaca_evaluation_data.py  toolllm_evaluation_data_utils.py  toolllm_utils.py  upload_queries_in_toolllm_format.py  upload_raw_queries.py  upload_standardized_api_list.py  upload_standardized_queries.py
raven/data/resources/: cve_cpe_function_definitions.py  cve_cpe_queries.json  emailrep_queries.json  rapidapi.py  server.py  toolalpaca_queries.json  toolllm_queries.json  virustotal_function_definitions.py  virustotal_queries.json
raven/eval/: __init__.py  evaluate_existing.py  evaluator.py  raven_utils.py  run_toolllm.py
scripts/: evaluate_codellamainstruct.sh  evaluate_gpt3_5.sh  evaluate_gpt3_5_instruct.sh  evaluate_gpt4.sh  evaluate_nexusraven.sh  evaluate_toolalpaca.sh  evaluate_toolllm.sh  langchain_example.py  non_langchain_example.py
tests/: __init__.py  utils.py
tests/data/: test_process_toolalpaca_evaluation_data.py  test_upload_queries_in_toolllm_format.py  test_upload_raw_queries.py  test_upload_standardized_api_list.py
